# semantic-merkle-tree

./: .gitignore  README.md  index.json  main.py  merkle_tree.json  pyproject.toml  readme.MD
example_folder/: 1.txt
example_folder/subfolder/: 2.txt  3.txt
folder_1/: file_1.txt
folder_1/sub_folder_1/: file_2.txt  file_3.txt
merkle_tree/: gemini_invoke.py  merkle_tree_generation.py  merkle_tree_integrity.py
